--- a/firebase.json
+++ b/firebase.json
@@ -57,6 +57,11 @@
                 "type" : 301
             },
             {
+                "source" : "/running-your-organisation/credit-union",
+                "destination" : "/credit-union",
+                "type" : 301
+            },
+            {
                 "source" : "/creditunion",
                 "destination" : "/credit-union",
                 "type" : 301
