--- a/firebase.json
+++ b/firebase.json
@@ -207,6 +207,11 @@
                 "type" : 301
             },
             {
+                "source" : "/professionalservices",
+                "destination" : "/services/membership/benefits/professional-services",
+                "type" : 301
+            },
+            {
                 "source" : "/stats",
                 "destination" : "/policy-research",
                 "type" : 301
