Turned on AOT and production build (testing)

--- a/firebase.json
+++ b/firebase.json
@@ -97,6 +97,11 @@
                 "type" : 301
             },
             {
+                "source" : "/advice",
+                "destination" : "/running-your-organisation",
+                "type" : 301
+            },
+            {
                 "source" : "/cjs",
                 "destination" : "/jobs/community-jobs-scotland",
                 "type" : 301
