Local copy of cookie notice script

--- a/package.json
+++ b/package.json
@@ -5,18 +5,17 @@
   "scripts": {
     "ng": "ng",
     "start": "npm run serve",
-    "build": "ng build",
+    "build-dev": "ng build",
     "build-prod": "ng build --prod --aot=false && cd dist && mv inline.*.bundle.js inline.bundle.js && mv main.*.bundle.js main.bundle.js && mv polyfills.*.bundle.js polyfills.bundle.js && mv vendor.*.bundle.js vendor.bundle.js && rm styles.*.bundle.css && cd ..",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "yarn": "echo '#### yarn.lock has changed!'; $NVM_BIN/yarn; cd functions; $NVM_BIN/yarn; cd ..",
     "serve-r": "cd ../scvo-router; npm run build; npm link; cd ../scvo-frontend; npm link scvo-router; cd functions; npm link scvo-router; cd ..; npm run serve",
-    "serve": "cd ./functions && npm run build && cd ../ && npm run build && devmode=true firebase serve -p 9000 --only functions,hosting",
+    "serve": "cd ./functions && npm run build && cd ../ && npm run build-dev && devmode=true firebase serve -p 9000 --only functions,hosting",
     "serve-f": "cd ./functions && npm run build && cd ../ && devmode=true firebase serve -p 9000 --only functions",
-    "deploy": "cd ./functions && npm run build && npm run deploy-db && cd ../ && npm run build && firebase deploy --only functions,hosting",
-    "deploy-prod": "npm run build-prod && firebase deploy --only hosting",
-    "deploy-h": "npm run build && firebase deploy --only hosting",
+    "deploy": "cd ./functions && npm run build && npm run deploy-db && cd ../ && npm run build-prod && firebase deploy --only functions,hosting",
+    "deploy-h": "npm run build-prod && firebase deploy --only hosting",
     "deploy-f": "cd ./functions && npm run build && cd ../ && firebase deploy --only functions",
     "postmerge": "git diff-tree -r --name-only --no-commit-id ORIG_HEAD HEAD | grep --quiet 'yarn.lock' && eval 'npm run yarn'"
   },
