--- a/firebase.json
+++ b/firebase.json
@@ -282,6 +282,26 @@
             "firebase.json",
             "**/.*",
             "**/node_modules/**"
+        ],
+        "headers": [
+            {
+                "source" : "**/*.@(eot|otf|ttf|ttc|woff|font.css)",
+                "headers" : [
+                    {
+                        "key" : "Access-Control-Allow-Origin",
+                        "value" : "*"
+                    }
+                ]
+            },
+            {
+                "source" : "**",
+                "headers" : [
+                    {
+                        "key" : "Cache-Control",
+                        "value" : "max-age=86400"
+                    }
+                ]
+            }
         ]
     },
     "storage": {
