--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
     "@types/request": "^2.0.6",
     "@types/uuid": "^3.4.3",
     "clayhandlebars": "^3.2.2",
+    "compression": "^1.7.1",
     "cookie-parser": "^1.4.3",
     "dot-object": "^1.7.0",
     "firebase-admin": "5.4.0",
