--- a/functions/package.json
+++ b/functions/package.json
@@ -5,8 +5,9 @@
     "cleanup": "rm -rf ./dist",
     "start": "npm run build;firebase serve --only functions",
     "build": "npm run cleanup; npm run json2;tsc",
-    "json2": "node json2 ./test-db/json2/**/*.json2 ./test-db/json; node json2 ./test-db/db.json2 ./test-db",
-    "deploy-db": "npm run json2; firebase database:set -y / ./test-db/db.json"
+    "json2": "node json2 ./test-db/json2/**/*.json2 ./test-db/json; node json2 ./test-db/db.json2 ./test-db; npm run scss",
+    "deploy-db": "npm run json2; firebase database:set -y / ./test-db/db.json",
+    "scss": "node-sass --output-style compressed test-db/json2/scvo/scvo-styles.scss > ../src/assets/css/scvo-styles.css;node-sass --output-style compressed test-db/json2/scvo/scvo-styles.scss > ../dist/assets/css/scvo-styles.css"
   },
   "dependencies": {
     "@types/jsdom": "^11.0.2",
