Package tidy and re-added husky

--- a/functions/package.json
+++ b/functions/package.json
@@ -2,8 +2,8 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "scripts": {
-    "start": "npm run build;firebase serve --only functions",
-    "build": "npm run cleanup; npm run json2;tsc"
+      "start": "cd ../; grunt serve",
+      "build": "cd ../; grunt build"
   },
   "dependencies": {
     "@types/jsdom": "^11.0.2",
