Upgraded router and added router upgrade grunt task

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
         "postmerge": "git diff-tree -r --name-only --no-commit-id ORIG_HEAD HEAD | grep --quiet 'yarn.lock' && eval 'npm run yarn'"
     },
     "private": true,
-    "dependencies": {},
+    "dependencies": {
+        "scvo-router": "1.0.53"
+    },
     "devDependencies": {
         "grunt": "^1.0.1",
         "grunt-bg-shell": "^2.3.3",
