--- a/functions/package.json
+++ b/functions/package.json
@@ -2,8 +2,8 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "scripts": {
-      "start": "cd ../; grunt serve",
-      "build": "cd ../; grunt build"
+    "start": "cd ../; grunt serve",
+    "build": "cd ../; grunt build"
   },
   "dependencies": {
     "@types/jsdom": "^11.0.2",
@@ -24,7 +24,7 @@
     "pdfmake": "^0.1.33",
     "q": "^1.5.0",
     "request": "^2.83.0",
-    "scvo-router": "1.0.52",
+    "scvo-router": "^1.0.53",
     "string": "^3.3.3",
     "uuid": "^3.1.0"
   },
