--- a/firebase.json
+++ b/firebase.json
@@ -178,8 +178,8 @@
             },
             {
                 "source" : "/awards",
-                "destination" : "https://goodhq.org/scottish_charity_awards_2017/",
-                "type" : 302
+                "destination" : "/scottish-charity-awards",
+                "type" : 301
             },
             {
                 "source" : "/charityawards",
