--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     },
     "private": true,
     "dependencies": {
-        "scvo-router": "1.0.64"
+        "scvo-router": "^1.0.65"
     },
     "devDependencies": {
         "grunt": "^1.0.1",
