--- a/firebase.json
+++ b/firebase.json
@@ -247,6 +247,11 @@
                 "type" : 301
             },
             {
+                "source" : "/affordable-office-space",
+                "destination" : "/services/office-space",
+                "type" : 301
+            },
+            {
                 "source" : "/joinourhub",
                 "destination" : "/services/office-space",
                 "type" : 301
