--- a/firebase.json
+++ b/firebase.json
@@ -182,6 +182,11 @@
                 "type" : 301
             },
             {
+                "source" : "/scottish-charity-awards-2017",
+                "destination" : "/scottish-charity-awards",
+                "type" : 301
+            },
+            {
                 "source" : "/charityawards",
                 "destination" : "https://goodhq.org/scottish_charity_awards_2017/",
                 "type" : 302
