--- a/firebase.json
+++ b/firebase.json
@@ -12,6 +12,16 @@
                 "type" : 301
             },
             {
+                "source" : "/jobs-employability/cjs/",
+                "destination" : "/jobs/community-jobs-scotland",
+                "type" : 301
+            },
+            {
+                "source" : "/jobs-employability/cjs/*",
+                "destination" : "/jobs/community-jobs-scotland",
+                "type" : 301
+            },
+            {
                 "source" : "/jobs-employability/*",
                 "destination" : "/jobs",
                 "type" : 301
