--- a/firebase.json
+++ b/firebase.json
@@ -12,7 +12,12 @@
                 "type" : 301
             },
             {
-                "source" : "/jobs-employability/cjs/",
+                "source" : "/jobs-employability/vacancies/goodmoves",
+                "destination" : "/jobs/search",
+                "type" : 301
+            },
+            {
+                "source" : "/jobs-employability/cjs",
                 "destination" : "/jobs/community-jobs-scotland",
                 "type" : 301
             },
