--- a/firebase.json
+++ b/firebase.json
@@ -47,6 +47,11 @@
                 "type" : 301
             },
             {
+                "source" : "/setting-up-a-charity/decide-on-a-structure/company-limited-by-guarantee",
+                "destination" : "/setting-up-a-charity/decide-on-structure/company-limited-by-guarantee",
+                "type" : 301
+            },
+            {
                 "source" : "/news-campaigns-policy",
                 "destination" : "/policy-research",
                 "type" : 301
@@ -74,6 +79,11 @@
             {
                 "source" : "/running-your-organisation/credit-union",
                 "destination" : "/credit-union",
+                "type" : 301
+            },
+            {
+                "source" : "/running-your-organisation/credit-union/credit-union-loan-repayment-calculator",
+                "destination" : "/credit-union/loan-calculator",
                 "type" : 301
             },
             {
