--- a/firebase.json
+++ b/firebase.json
@@ -37,6 +37,106 @@
                 "type" : 301
             },
             {
+                "source" : "/events/digital-technology-changing-the-way-we-work",
+                "destination" : "/digital/events/a1v0n000008kauiqag-digital-technology-changing-the-way-we-work",
+                "type" : 301
+            },
+            {
+                "source" : "/digital/evolution/digital-pioneers/shapinsay",
+                "destination" : "/digital/evolution/digital-pioneers/shapinsay-development-trust",
+                "type" : 301
+            },
+            {
+                "source" : "/events/tackling-digital-social-exclusion-local-workshop-6",
+                "destination" : "/digital/events/a1v0n000008k7avqa0-tackling-digital-social-exclusion-local-workshop",
+                "type" : 301
+            },
+            {
+                "source" : "/events/tackling-digital-social-exclusion-local-workshop-5",
+                "destination" : "/digital/events/a1v0n000008k7aqqa0-tackling-digital-social-exclusion-local-workshop",
+                "type" : 301
+            },
+            {
+                "source" : "/digital/evolution/digital-pioneers/sve",
+                "destination" : "/digital/evolution/digital-pioneers/stirlingshire-voluntary-enterprise",
+                "type" : 301
+            },
+            {
+                "source" : "/digital/evolution/digital-pioneers/grampian-ha",
+                "destination" : "/digital/evolution/digital-pioneers/grampian-housing-association",
+                "type" : 301
+            },
+            {
+                "source" : "/digital/evolution/digital-pioneers/iconnect-northeast",
+                "destination" : "/digital/evolution/digital-pioneers/iconnect-north-east",
+                "type" : 301
+            },
+            {
+                "source" : "/digital/evolution/digital-pioneers/mihc-scotland",
+                "destination" : "/digital/evolution/digital-pioneers/music-in-hospitals-and-care",
+                "type" : 301
+            },
+            {
+                "source" : "/digital/evolution/digital-pioneers/leadscotland",
+                "destination" : "/digital/evolution/digital-pioneers/lead-scotland",
+                "type" : 301
+            },
+            {
+                "source" : "/running-your-organisation/good-governance/governance-roles-and-responsibilities",
+                "destination" : "/running-your-organisation/governance/roles-responsibilities",
+                "type" : 301
+            },
+            {
+                "source" : "/media-release/scvo-appoints-new-chief-executive",
+                "destination" : "/post/2018/01/24/scvo-appoints-new-chief-executive",
+                "type" : 301
+            },
+            {
+                "source" : "/running-your-organisation/finance-business-management/business-and-strategic-planning/monitoring-evaluation-review",
+                "destination" : "/running-your-organisation/business-planning/monitoring-evaluation-review",
+                "type" : 301
+            },
+            {
+                "source" : "/setting-up-a-charity/decide-on-a-structure/voluntary-or-unincorporated-association",
+                "destination" : "/setting-up-a-charity/decide-on-structure",
+                "type" : 301
+            },
+            {
+                "source" : "/author/lucymcternan",
+                "destination" : "/about/staff-team/005b0000001zzguaas-lucy-mcternan",
+                "type" : 301
+            },
+            {
+                "source" : "/news-campaigns-and-policy/research/scvo-scottish-third-sector-statistics",
+                "destination" : "/policy-research",
+                "type" : 301
+            },
+            {
+                "source" : "/setting-up-a-charity/write-your-constitution/scottish-charitable-incorporated-organisation",
+                "destination" : "/setting-up-a-charity/decide-on-structure/scio/write-your-scio-constitution",
+                "type" : 301
+            },
+            {
+                "source" : "/running-your-organisation/legislation-regulation/data-protection",
+                "destination" : "/running-your-organisation/legislation/data-protection",
+                "type" : 301
+            },
+            {
+                "source" : "/running-your-organisation/managing-staff-volunteers/staff/scottish-joint-council-pay-scales",
+                "destination" : "/running-your-organisation/staff-volunteers/staff",
+                "type" : 301
+            },
+            {
+                "source" : "/long-form-posts/setting-up-a-charity-faqs",
+                "destination" : "/setting-up-a-charity/frequently-asked-questions",
+                "type" : 301
+            },
+            {
+                "source" : "/wp-content/uploads/2015/05/Bank_Account_Comparison_Table_2015.pdf",
+                "destination" : "/running-your-organisation/finance-business-management/bank-accounts/comparison",
+                "type" : 301
+            },
+            {
                 "source" : "/contact-us",
                 "destination" : "/about/staff-team",
                 "type" : 301
