--- a/firebase.json
+++ b/firebase.json
@@ -42,6 +42,11 @@
                 "type" : 301
             },
             {
+                "source" : "/digital/participation/basic-digital-skills/questionnaire",
+                "destination" : "/digital/participation/skills/questionnaire",
+                "type" : 301
+            },
+            {
                 "source" : "/events/digital-technology-changing-the-way-we-work",
                 "destination" : "/digital/events/a1v0n000008kauiqag-digital-technology-changing-the-way-we-work",
                 "type" : 301
