--- a/firebase.json
+++ b/firebase.json
@@ -7,6 +7,11 @@
         "trailingSlash": false,
         "redirects": [
             {
+                "source" : "/ccrf",
+                "destination" : "/running-your-organisation/funding/community-capacity-resilience-fund",
+                "type" : 301
+            },
+            {
                 "source" : "/jobs-employability",
                 "destination" : "/jobs",
                 "type" : 301
