Digital page updates and a working central login system

--- a/firebase.json
+++ b/firebase.json
@@ -7,6 +7,11 @@
         "trailingSlash": false,
         "redirects": [
             {
+                "source" : "/pro-bono",
+                "destination" : "/services/membership/benefits/professional-services",
+                "type": 301
+            },
+            {
                 "source" : "/ccrf",
                 "destination" : "/running-your-organisation/funding/community-capacity-resilience-fund",
                 "type" : 301
