--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
     "clayhandlebars": "^3.2.2",
     "compression": "^1.7.1",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "dot-object": "^1.7.0",
     "firebase-admin": "5.4.0",
     "firebase-functions": "^0.7.5",
