New abstracted version

--- a/firebase.json
+++ b/firebase.json
@@ -424,6 +424,14 @@
         ],
         "rewrites": [
             {
+                "source": "/centralAuthLogin",
+                "function": "centralAuthLogin"
+            },
+            {
+                "source": "/headersTest",
+                "function": "headersTest"
+            },
+            {
                 "source": "**",
                 "function": "index"
             }
