--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "scvo",
+    "name": "scvo-frontend",
     "version": "1.0.0",
     "license": "MIT",
     "scripts": {
@@ -9,7 +9,7 @@
     },
     "private": true,
     "dependencies": {
-        "scvo-router": "1.0.69"
+        "scvo-router-task-elasticsearch": "git+https://github.com/scvodigital/router-task-elasticsearch.git"
     },
     "devDependencies": {
         "grunt": "^1.0.1",
