--- a/functions/package.json
+++ b/functions/package.json
@@ -6,15 +6,10 @@
     "build": "cd ../; grunt build"
   },
   "dependencies": {
+    "@firebase/app": "^0.1.10",
     "@firebase/app-types": "^0.1.2",
     "@firebase/database": "^0.1.11",
     "@firebase/database-types": "^0.1.2",
-    "@types/cookie": "^0.3.1",
-    "@types/jsdom": "^11.0.2",
-    "@types/node-sass": "^3.10.32",
-    "@types/q": "^1.0.5",
-    "@types/request": "^2.0.6",
-    "@types/uuid": "^3.4.3",
     "clayhandlebars": "^3.2.2",
     "compression": "^1.7.2",
     "cookie": "^0.3.1",
@@ -39,7 +34,13 @@
   "private": true,
   "main": "dist/index.js",
   "devDependencies": {
-    "chalk": "^2.1.0",
+    "@types/cookie": "^0.3.1",
+    "@types/jsdom": "^11.0.2",
+    "@types/node-sass": "^3.10.32",
+    "@types/q": "^1.0.5",
+    "@types/request": "^2.0.6",
+    "@types/uuid": "^3.4.3",
+    "chalk": "^2.3.1",
     "dot-object": "^1.7.0",
     "typescript": "^2.5.3"
   }
