updating some references

--- a/functions/package.json
+++ b/functions/package.json
@@ -10,8 +10,8 @@
     "@firebase/app-types": "^0.1.2",
     "@firebase/database": "^0.1.11",
     "@firebase/database-types": "^0.1.2",
-    "@scvo/router-task-elasticsearch": "^0.0.3",
     "@scvo/router": "1.1.0",
+    "@scvo/router-task-elasticsearch": "0.0.4",
     "clayhandlebars": "^3.2.2",
     "compression": "^1.7.2",
     "cookie": "^0.3.1",
