--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     },
     "private": true,
     "dependencies": {
+        "@scvo/router": "1.1.0",
+        "@scvo/router-task-elasticsearch": "0.0.4",
         "scvo-router-task-elasticsearch": "git+https://github.com/scvodigital/router-task-elasticsearch.git"
     },
     "devDependencies": {
