--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "dot-object": "^1.7.0",
     "express": "^4.16.2",
     "firebase-admin": "^5.9.0",
+    "livereload": "^0.7.0",
+    "nsfw": "^1.0.16",
     "pdfmake": "^0.1.36",
     "request": "^2.83.0",
     "string": "^3.3.3"
