--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@firebase/database-types": "^0.1.2",
     "@scvo/router": "1.1.5",
     "@scvo/router-destination-handlebars": "0.0.9",
+    "@scvo/router-destination-redirect": "0.0.5",
     "@scvo/router-task-elasticsearch": "0.0.9",
     "body-parser": "^1.18.2",
     "chalk": "^2.3.1",
@@ -39,7 +40,6 @@
     "livereload": "^0.7.0",
     "nsfw": "^1.0.16",
     "pdfmake": "^0.1.36",
-    "request": "^2.83.0",
     "string": "^3.3.3"
   },
   "devDependencies": {
