--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "string": "^3.3.3"
   },
   "devDependencies": {
+    "@scvo/json-inc": "0.0.5",
     "@types/body-parser": "^1.16.8",
     "@types/chalk": "^2.2.0",
     "@types/compression": "^0.0.35",
@@ -51,6 +52,7 @@
     "@types/express": "^4.11.1",
     "@types/q": "^1.0.7",
     "@types/request": "^2.47.0",
-    "@types/string": "^0.0.29"
+    "@types/string": "^0.0.29",
+    "node-sass": "^4.7.2"
   }
 }
