--- a/dispatch.yaml
+++ b/dispatch.yaml
@@ -1,21 +1,30 @@
 dispatch:
-  - url: "scvo.net/"
-    service: default
-  - url: "scvo.org/"
+  - url: "scvo.net/*"
+    service: scvo-emailer
+
+  - url: "scvo.org/*"
     service: scvo-frontend
-  - url: "test.scvo.org/"
+
+  - url: "test.scvo.org/*"
     service: scvo-frontend
-  - url: "www.scvo.org/"
+
+  - url: "www.scvo.org/*"
     service: scvo-frontend
-  - url: "scvo.org.uk/"
+
+  - url: "scvo.org.uk/*"
     service: scvo-frontend
-  - url: "test.scvo.org.uk/"
+
+  - url: "test.scvo.org.uk/*"
     service: scvo-frontend
-  - url: "www.scvo.org.uk/"
+
+  - url: "www.scvo.org.uk/*"
     service: scvo-frontend
-  - url: "goodmoves.com/"
+
+  - url: "goodmoves.com/*"
     service: scvo-frontend
-  - url: "test.goodmoves.com/"
+
+  - url: "test.goodmoves.com/*"
     service: scvo-frontend
-  - url: "www.goodmoves.com/"
+
+  - url: "www.goodmoves.com/*"
     service: scvo-frontend
