--- a/dispatch.yaml
+++ b/dispatch.yaml
@@ -1,30 +1,31 @@
 dispatch:
+
   - url: "scvo.net/*"
     service: scvo-emailer
 
   - url: "scvo.org/*"
     service: scvo-frontend
 
-  - url: "test.scvo.org/*"
-    service: scvo-frontend
-
-  - url: "www.scvo.org/*"
-    service: scvo-frontend
-
   - url: "scvo.org.uk/*"
-    service: scvo-frontend
-
-  - url: "test.scvo.org.uk/*"
-    service: scvo-frontend
-
-  - url: "www.scvo.org.uk/*"
-    service: scvo-frontend
-
-  - url: "goodmoves.com/*"
     service: scvo-frontend
 
   - url: "test.goodmoves.com/*"
     service: scvo-frontend
 
-  - url: "www.goodmoves.com/*"
+  - url: "goodmoves.com/*"
+    service: scvo-frontend
+
+  - url: "goodmoves.scot/*"
+    service: scvo-frontend
+
+  - url: "goodmoves.be/*"
+    service: scvo-frontend
+
+  - url: "goodmovesjobs.de/*"
+    service: scvo-frontend
+
+  - url: "digitalparticipation.scot/*"
+    service: scvo-frontend
+
+  - url: "humanrightsdeclaration.scot/*"
     service: scvo-frontend
