--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "start": "node dist/index.js",
     "dev": "npm run build; devmode=true node dist/index.js",
     "dev-router": "npm run router; npm run dev",
+    "deploy-dispatch": "gcloud app deploy dispatch.yaml",
     "deploy-db": "npm run build; firebase database:set -y /app-engine ./db/db.json",
-    "deploy-app": "npm run build; gcloud beta app deploy"
+    "deploy-app": "npm run build; npm run deploy-dispatch; gcloud beta app deploy"
   },
   "author": "Matthew Wilkes (https://scvo.org.uk)",
   "license": "GPL-3.0",
