--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "start": "node dist/index.js",
     "dev": "npm run build; devmode=true node dist/index.js",
     "dev-router": "npm run router; npm run dev",
-    "deploy-dispatch": "gcloud app deploy dispatch.yaml",
+    "deploy-dispatch": "gcloud app deploy dispatch.yaml --quiet",
     "deploy-db": "npm run build; firebase database:set -y /app-engine ./db/db.json",
     "deploy-app": "npm run build; npm run deploy-dispatch; gcloud beta app deploy"
   },
