--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "dev-router": "npm run router; npm run dev",
     "deploy-dispatch": "gcloud app deploy dispatch.yaml --quiet",
     "deploy-db": "npm run build; firebase database:set -y /app-engine ./db/db.json",
-    "deploy-app": "npm run build; npm run deploy-dispatch; gcloud beta app deploy"
+    "deploy-app": "npm run build; npm run deploy-dispatch; gcloud beta app deploy --quiet"
   },
   "author": "Matthew Wilkes (https://scvo.org.uk)",
   "license": "GPL-3.0",
