--- a/dispatch.yaml
+++ b/dispatch.yaml
@@ -3,6 +3,9 @@ dispatch:
   - url: "scvo.net/*"
     service: scvo-emailer
 
+  - url: "amp.scvo.org/*"
+    service: scvo-frontend
+
   - url: "scvo.org/*"
     service: scvo-frontend
 
@@ -21,7 +24,7 @@ dispatch:
   - url: "goodmoves.be/*"
     service: scvo-frontend
 
-  - url: "goodmovesjobs.de/*"
+  - url: "goodmoves.org.uk/*"
     service: scvo-frontend
 
   - url: "digitalparticipation.scot/*"
