--- a/app.yaml
+++ b/app.yaml
@@ -1,9 +1,26 @@
 service: scvo-frontend
 env: flex
 runtime: nodejs
+
 manual_scaling:
   instances: 2 
+
 resources:
   cpu: 2
   memory_gb: 2
   disk_size_gb: 10
+
+readiness_check:
+  path: "/readiness_check"
+  check_interval_sec: 5
+  timeout_sec: 4
+  failure_threshold: 2
+  success_threshold: 2
+  app_start_timeout_sec: 300
+
+liveness_check:
+  path: "/liveness_check"
+  check_interval_sec: 30
+  timeout_sec: 4
+  failure_threshold: 2
+  success_threshold: 2
