Pointing scvo.net/* at default

--- a/dispatch.yaml
+++ b/dispatch.yaml
@@ -1,7 +1,7 @@
 dispatch:
 
   - url: "scvo.net/*"
-    service: scvo-emailer
+    service: default
 
   - url: "amp.scvo.org/*"
     service: scvo-frontend
