--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "json2": "json-inc ./db/json2/**/*.json2 ./db/json; json-inc ./db/db.json2 ./db",
     "copy": "cp ./db/db.json ./dist/db.json; cp -r ./assets ./dist/assets",
     "sass": "node-sass ./dist/assets/css -o dist/assets/css",
-    "router": "cd ../router; npm run local; cd ../frontend; npm link @scvo/router; npm link @scvo/router-task-elasticsearch; npm link @scvo/router-destination-handlebars",
     "upgrade-router": "yarn add -E @scvo/router @scvo/router-task-elasticsearch @scvo/router-destination-handlebars",
     "build": "npm run cleanup; tsc; npm run json2; npm run copy; npm run sass",
     "start": "node dist/index.js",
@@ -21,7 +20,12 @@
     "deploy-dispatch": "gcloud app deploy dispatch.yaml --quiet",
     "clear-cache": "curl -s https://scvo.org.uk/reload-sites",
     "deploy-db": "npm run build; firebase database:set -y /app-engine ./db/db.json; npm run clear-cache",
-    "deploy-app": "npm run build; npm run deploy-dispatch; gcloud beta app deploy --quiet; npm run deploy-db"
+    "deploy-app": "npm run build; npm run deploy-dispatch; gcloud beta app deploy --quiet; npm run deploy-db",
+    "router": "cd ../router && npm run local && cd ../frontend && npm run l-router && npm run l-elastic && npm run l-handlebars && npm run l-redirect",
+    "l-router": "npm link @scvo/router",
+    "l-elastic": "npm link @scvo/router-task-elasticsearch",
+    "l-handlebars": "npm link @scvo/router-destination-handlebars",
+    "l-redirect": "npm link @scvo/router-destination-redirect"
   },
   "author": "Matthew Wilkes (https://scvo.org.uk)",
   "license": "GPL-3.0",
@@ -30,10 +34,10 @@
     "@firebase/app-types": "^0.1.2",
     "@firebase/database": "^0.1.11",
     "@firebase/database-types": "^0.1.2",
-    "@scvo/router": "1.1.5",
-    "@scvo/router-destination-handlebars": "0.0.9",
-    "@scvo/router-destination-redirect": "0.0.5",
-    "@scvo/router-task-elasticsearch": "0.0.9",
+    "@scvo/router": "1.1.7",
+    "@scvo/router-destination-handlebars": "0.0.11",
+    "@scvo/router-destination-redirect": "0.0.7",
+    "@scvo/router-task-elasticsearch": "0.0.11",
     "body-parser": "^1.18.2",
     "chalk": "^2.3.1",
     "compression": "^1.7.2",
