--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "@scvo/frontend",
   "version": "0.0.1",
   "description": "The App Engine service that runs the SCVO=>Router",
-  "main": "dist/index.js",
+  "main": "build/index.js",
   "engines": {
     "node": ">=6.11.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "cleanup": "rm -rf ./dist",
+    "cleanup": "rm -rf ./build",
     "json2": "json-inc ./db/json2/**/*.json2 ./db/json; json-inc ./db/db.json2 ./db",
     "copy": "cp ./db/db.json ./build/db.json; cp -r ./assets ./build/assets",
     "sass": "node-sass ./build/assets/css -o build/assets/css",
