More improvements to goodmoves homepage

--- a/dispatch.yaml
+++ b/dispatch.yaml
@@ -1,12 +1,14 @@
 dispatch:
-
   - url: "scvo.net/*"
     service: default
 
-  - url: "amp.scvo.org/*"
+  - url: "www.scvo.org/*"
     service: scvo-frontend
 
   - url: "scvo.org/*"
+    service: scvo-frontend
+
+  - url: "www.scvo.org.uk/*"
     service: scvo-frontend
 
   - url: "scvo.org.uk/*"
