Router upgrades and Goodmoves work

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "json2": "json-inc ./db/configurations/**/*.json2 ./db/configurations-compiled; json-inc ./db/db.json2 ./db",
     "copy": "cp ./db/db.json ./build/db.json; cp -r ./assets ./build/assets",
     "sass": "node-sass ./build/assets/css -o build/assets/css",
-    "upgrade-router": "yarn add -E @scvo/router @scvo/router-task-elasticsearch @scvo/router-destination-handlebars",
+    "upgrade-router": "yarn add -E @scvo/router @scvo/router-task-firebase @scvo/router-task-elasticsearch @scvo/router-destination-handlebars @scvo/router-destination-redirect",
     "build": "npm run cleanup; npm run compile; npm run json2; npm run copy; npm run sass",
     "start": "npm run compile; node build/index.js",
     "dev": "npm run build; devmode=true node build/index.js",
@@ -21,8 +21,9 @@
     "clear-cache": "curl -s https://scvo.org.uk/reload-sites",
     "deploy-db": "npm run build; firebase database:set -y /app-engine ./db/db.json; npm run clear-cache",
     "deploy-app": "npm run build; npm run deploy-dispatch; gcloud beta app deploy --quiet; npm run deploy-db",
-    "router": "cd ../router && npm run local && cd ../frontend && npm run l-router && npm run l-elastic && npm run l-handlebars && npm run l-redirect",
+    "router": "cd ../router && npm run local && cd ../frontend && npm run l-router && npm run l-elastic && npm run l-handlebars && npm run l-redirect && npm run l-firebase",
     "l-router": "npm link @scvo/router",
+    "l-firebase": "npm link @scvo/router-task-firebase",
     "l-elastic": "npm link @scvo/router-task-elasticsearch",
     "l-handlebars": "npm link @scvo/router-destination-handlebars",
     "l-redirect": "npm link @scvo/router-destination-redirect",
@@ -37,21 +38,20 @@
   "author": "Matthew Wilkes (https://scvo.org.uk)",
   "license": "GPL-3.0",
   "dependencies": {
-    "@firebase/app": "^0.1.10",
-    "@firebase/app-types": "^0.1.2",
-    "@firebase/database": "^0.1.11",
-    "@firebase/database-types": "^0.1.2",
-    "@scvo/router": "1.1.7",
-    "@scvo/router-destination-handlebars": "0.0.11",
+    "@scvo/router": "1.1.23",
+    "@scvo/router-destination-handlebars": "0.0.21",
     "@scvo/router-destination-redirect": "0.0.7",
     "@scvo/router-task-elasticsearch": "0.0.13",
+    "@scvo/router-task-firebase": "0.0.2",
+    "@types/cookie-parser": "^1.4.1",
     "body-parser": "^1.18.2",
     "chalk": "^2.3.1",
     "compression": "^1.7.2",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "dot-object": "^1.7.0",
     "express": "^4.16.2",
-    "firebase-admin": "^5.9.0",
+    "firebase-admin": "^5.12.0",
     "livereload": "^0.7.0",
     "nsfw": "^1.0.16",
     "pdfmake": "^0.1.36",
@@ -66,6 +66,7 @@
     "@types/dot-object": "^1.5.0",
     "@types/elasticsearch": "^5.0.22",
     "@types/express": "^4.11.1",
+    "@types/node": "^9.6.5",
     "@types/q": "^1.0.7",
     "@types/request": "^2.47.0",
     "@types/string": "^0.0.29",
